--- a/server/public/views/templates/nav.html
+++ b/server/public/views/templates/nav.html
@@ -1,5 +1,8 @@
-<ul class="nav nav-tabs">
-  <li role="presentation" class="active"><a href="submit.html">Submit</a></li>
-  <li role="presentation"><a href="search.html">Search</a></li>
-  <li role="presentation"><a href="cal.html">Calendar</a></li>
-</ul>
+<div class="row">
+    <ul>
+      <li><a href="#submit">Save</a></li>
+      <li><a href="#search">Search</a></a></li>
+      <li><a href="#cal">Calendar</a></li>
+    </ul>
+  </div>
+</div>
