--- a/server/public/styles/style.css
+++ b/server/public/styles/style.css
@@ -1,3 +1,24 @@
 h1 {
-  text-align:center;
+  text-align: center;
+
+}
+
+ul {
+  list-style-type: none;
+}
+.wrapper {
+  height: 225px;
+  width: auto;
+  text-align: left;
+  background: lightblue;
+  border: 10px;
+  border-radius: 10px;
+}
+
+ol {
+  list-style-type: none;
+}
+
+li {
+  margin: 5px;
 }
