--- a/server/public/views/index.html
+++ b/server/public/views/index.html
@@ -2,10 +2,15 @@
 <html>
 <head>
   <title>Rearview Menu: Dinner at a (Backwards) Glance</title>
+  <!--CSS-->
   <link rel="stylesheet" href="../styles/style.css" />
+  <link rel="stylesheet" href="../styles/angular-lightbox.css" />
+  <!--Angular-->
   <script type="text/javascript" src="../vendor/angular.min.js"></script>
   <script type="text/javascript" src="../vendor/angular-route.min.js"></script>
   <script type="text/javascript" src="../scripts/clientapp.js"></script>
+  <script type="text/javascript" src="../scripts/angular-lightbox.js"></script>
+<!--Controllers-->
   <script type="text/javascript" src="../scripts/controllers/postcontroller.js"></script>
   <script type="text/javascript" src="../scripts/controllers/getcontroller.js"></script>
 
