search page functional w/modal

--- a/server/public/views/index.html
+++ b/server/public/views/index.html
@@ -4,12 +4,13 @@
   <title>Rearview Menu: Dinner at a (Backwards) Glance</title>
   <!--CSS-->
   <link rel="stylesheet" href="../styles/style.css" />
-  <link rel="stylesheet" href="../styles/angular-lightbox.css" />
+  <link rel="stylesheet" href="../styles/ng-modal.css" />
+
   <!--Angular-->
   <script type="text/javascript" src="../vendor/angular.min.js"></script>
   <script type="text/javascript" src="../vendor/angular-route.min.js"></script>
   <script type="text/javascript" src="../scripts/clientapp.js"></script>
-  <script type="text/javascript" src="../scripts/angular-lightbox.js"></script>
+  <script type="text/javascript" src="../vendor/ng-modal.min.js"></script>
 <!--Controllers-->
   <script type="text/javascript" src="../scripts/controllers/postcontroller.js"></script>
   <script type="text/javascript" src="../scripts/controllers/getcontroller.js"></script>
