--- a/server/public/views/submit.html
+++ b/server/public/views/submit.html
@@ -1,5 +1,6 @@
-<section class="wrapper">
-<fieldset>
+<section id="content">
+  <section class="wrapper">
+    <fieldset>
   <legend>Save a Recipe</legend>
   <ol>
     <li>
@@ -33,4 +34,5 @@
 
   </ol>
 </fieldset>
+</section>
 </section>
