--- a/server/public/views/templates/nav.html
+++ b/server/public/views/templates/nav.html
@@ -1,8 +1,10 @@
-<div class="row">
+<nav>
     <ul>
-      <li><a href="#submit">Save</a></li>
-      <li><a href="#search">Search</a></a></li>
-      <li><a href="#cal">Calendar</a></li>
+        <li><a href="#home">Home</a></li>
+        <li id="selected"><a href="#submit">Save a Recipe</a></li>
+        <li><a href="#search">Search</a></li>
+        <li><a href="#cal">Calendar View</a></li>
     </ul>
-  </div>
-</div>
+</nav>
+
+</header>
