--- a/server/public/views/index.html
+++ b/server/public/views/index.html
@@ -3,6 +3,7 @@
 <head>
   <title>Rearview Menu: Dinner at a (Backwards) Glance</title>
   <!--CSS-->
+  <link href='https://fonts.googleapis.com/css?family=Rock+Salt' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="../styles/style.css" />
   <link rel="stylesheet" href="../styles/ng-modal.css" />
 
