--- a/server/public/views/templates/footer.html
+++ b/server/public/views/templates/footer.html
@@ -1,4 +1,3 @@
-<div class="container-fluid">
-  <h2>Dinner at a Backwards Glance</h2>
-  <p class="text-center foot">Samantha H. Klein 2016</p>
+<div class="foot">
+  <p>Samantha H. Klein 2016</p>
 </div>
