--- a/server/public/styles/style.css
+++ b/server/public/styles/style.css
@@ -1,5 +1,5 @@
 body {
-  background-color: silver;
+  background-color: peachpuff;
 }
 
 h1 {
@@ -9,6 +9,10 @@ h1 {
 
 }
 
+h2 {
+  text-align: center;
+  font-family: 'Rock Salt', cursive;
+}
 ul {
   list-style-type: none;
 }
@@ -47,13 +51,14 @@ nav li a:hover {
 
 
 #content {
-    height: 400px;
+    height: 500px;
     width: auto;
     background-color: white;
     border: solid 8px black;
     border-radius: 8px;
     clear: right;
     align: center;
+    padding: 10px;
 }
 
 .citations:hover {
@@ -63,9 +68,11 @@ nav li a:hover {
 }
 
 .home {
-  padding-top: 150px;
-  padding-bottom: 150px;
-  align: center;
+  text-align: center;
+  padding-top: 200px;
+  padding-bottom: 200px;
+
+
 }
 
 .calendar {
@@ -76,4 +83,5 @@ nav li a:hover {
   border-radius: 8px;
   clear: right;
   align: center;
+  padding: 10px;
 }
