--- a/server/public/views/search.html
+++ b/server/public/views/search.html
@@ -1,19 +1,25 @@
 <section id="content">
 
-<legend>Search Recipes</legend>
-
-
-
-  <label for="source">Search By: </label>
-  <select ng-change="searchType()" ng-model="selectedSource" ng-options="x for x in searchTerm">
-  </select>
-  <div ng-show="textBox" class="ng-hide">
-    <input id="reqKeyword" name="keyword" ng-model="keyword" />
-    <button ng-click="searchRecipes()">Submit</button>
+<h2>Search</h2>
+<form>
+  <div class="form-group row">
+    <label for="source" class="col-sm-2 form-control-label">Search By: </label>
+    <div class="col-sm-10">
+      <select ng-change="searchType()" ng-model="selectedSource" ng-options="x for x in searchTerm" class="form-control"></select>
+    </div>
   </div>
-  <div ng-show="numBox" class="ng-hide">
-    <input type="number" id="reqKeyword" name="keyword" ng-model="rating" />
+  <div class="form-group-row">
+    <div ng-show="textBox" class="col-sm-offset-2 col-sm-10 ng-hide">
+    <input id="reqKeyword" name="keyword" ng-model="keyword" class="form-control" />
     <button ng-click="searchRecipes()">Submit</button>
+    </div>
+    <div ng-show="numBox" class="col-sm-offset-2 col-sm-10 ng-hide">
+    <input type="number" id="reqKeyword" name="keyword" ng-model="rating" class="form-control" />
+    </div>
+</div>
+    <button ng-click="searchRecipes()">Submit</button>
+  <div ng-show="message" class="ng-hide">
+    <h2>No results returned.</h2>
   </div>
   <div ng-repeat="recipe in recipes">
     <div>
@@ -26,8 +32,6 @@
         <p>Rating: {{recipe.rating}}</p>
       </modal-dialog>
 </div>
-<div ng-show="message" class="ng-hide">
-<p>No results returned.</p>
-</div>
+
 
 </section>
