--- a/server/public/views/submit.html
+++ b/server/public/views/submit.html
@@ -1,37 +1,51 @@
 <section id="content">
-    <fieldset>
-  <legend>Save a Recipe</legend>
-  <ol>
-    <li>
-      <label for="source">Type of Source:</label>
-      <select ng-model="selectedSource" ng-options="x for x in sources">
-      </select>
-    </li>
-    <li>
-      <label for="title">Name:</label>
-      <input id="currentRecTitle" name="title" ng-model="currentRec.title" placeholder="Name of Recipe" />
-    </li>
-    <li>
-      <label for="citation">Citation:</label>
-      <input id="currentRecCitation" name="citation" ng-model="currentRec.citation" placeholder="Location of Recipe" />
-    </li>
-    <li>
-      <label for="mainIngred">Main Ingredient:</label>
-      <input id="currentRecMainIngred" name="mainIngred" ng-model="currentRec.mainIngred" placeholder="Main Ingredient" />
-    </li>
-    <li>
-      <label for="rating">Rating (1 to 5)</label>
-      <input type="number" id="currentRecRating" name="rating" ng-model="currentRec.rating" />
-    </li>
-    <li>
-      <label for="date_made">Date Made:</label>
-      <input type="date" id="currentRecDate" name="date_made" ng-model="currentRec.date_made" />
-    </li>
-    <li>
-      <button ng-click="submitCurrentRec()">Submit</button>
-    </li>
+  <h2>Save a Recipe</h2>
+    <form>
+      <div class="form-group row">
+        <label for="source" class="col-sm-2 form-control-label">Type of Source:</label>
+        <div class="col-sm-10">
+          <select ng-model="selectedSource" ng-options="x for x in sources" class="form-control">
+          </select>
+        </div>
+      </div>
+      <div class="form-group row">
+        <label for="title" class="col-sm-2 form-control-label">Name:</label>
+        <div class="col-sm-10">
+          <input id="currentRecTitle" name="title" ng-model="currentRec.title" class="form-control" />
+        </div>
+      </div>
+      <div class="form-group row">
+        <label for="citation" class="col-sm-2 form-control-label">Citation:</label>
+        <div class="col-sm-10">
+          <input id="currentRecCitation" name="citation" ng-model="currentRec.citation" class="form-control" />
+        </div>
+      </div>
+      <div class="form-group row">
+      <label for="mainIngred" class="col-sm-2 form-control-label">Main Ingredients:</label>
+        <div class="col-sm-10">
+          <input id="currentRecMainIngred" name="mainIngred" ng-model="currentRec.mainIngred" class="form-control" />
+      </div>
+    </div>
+    <div class="form-group row">
+      <label for="rating" class="col-sm-2 form-control-label">Rating (1 to 5)</label>
+      <div class="col-sm-10">
+        <input type="number" id="currentRecRating" name="rating" ng-model="currentRec.rating" class="form-control" />
+      </div>
+    </div>
+    <div class="form-group row">
+      <label for="date_made" class="col-sm-2 form-control-label">Date Made:</label>
+      <div class="col-sm-10">
+        <input type="date" id="currentRecDate" name="date_made" ng-model="currentRec.date_made" class="form-control" />
+      </div>
+    </div>
+    <div class="form-group row">
+      <div class="col-sm-10">
+        <button ng-click="submitCurrentRec()">Submit</button>
+      </div>
+    </div>
+    </form>
+    <div ng-show="message" class="ng-hide">
+      <h2>Recipe Saved!</h2>
+    </div>
 
-  </ol>
-</fieldset>
-</section>
 </section>
