--- a/server/public/views/submit.html
+++ b/server/public/views/submit.html
@@ -27,7 +27,7 @@
       </div>
     </div>
     <div class="form-group row">
-      <label for="rating" class="col-sm-2 form-control-label">Rating (1 to 5):</label>
+      <label for="rating" class="col-sm-2 form-control-label">Rating (1-5):</label>
       <div class="col-sm-10">
         <input type="number" id="currentRecRating" name="rating" ng-model="currentRec.rating" class="form-control" />
       </div>
