--- a/server/public/views/index.html
+++ b/server/public/views/index.html
@@ -26,6 +26,7 @@
   <script type="text/javascript" src="../scripts/controllers/postcontroller.js"></script>
   <script type="text/javascript" src="../scripts/controllers/getcontroller.js"></script>
   <script type="text/javascript" src="../scripts/controllers/calcontroller.js"></script>
+  <script type="text/javascript" src="../scripts/controllers/listcontroller.js"></script>
 
 </head>
 <body ng-app="myApp">
