--- a/server/public/views/templates/nav.html
+++ b/server/public/views/templates/nav.html
@@ -3,6 +3,7 @@
         <li id="selected"><a href="#submit">Save a Recipe</a></li>
         <li><a href="#search">Search</a></li>
         <li><a href="#cal">Calendar View</a></li>
+        <li><a href="#list">List</a></li>
     </ul>
 </nav>
 
