--- a/server/public/views/list.html
+++ b/server/public/views/list.html
@@ -4,7 +4,7 @@
   <div ng-show="message" class="ng-hide">
     <h3>No results returned.</h3>
   </div>
-  <div ng-repeat="recipe in recipes | orderBy: name">
+  <div ng-repeat="recipe in recipes | orderBy: 'title'">
     <div>
       <p class="citations" ng-click="showRecipe(recipe._id)">{{recipe.title}}</p>
       <modal-dialog show='recipe.dialogShown' dialog-title='{{recipe.title}}'>
